--- a/src/Blog6/Blog6.module.css
+++ b/src/Blog6/Blog6.module.css
@@ -26,6 +26,7 @@
 
     align-items: center;
     flex-direction: column;
+    margin: 0px 0px 5px 0px;
 
 }
 .blog6_input {
@@ -36,7 +37,7 @@
 }
 .blog6_textarea {
     width: 490px;
-    height: 140px ;
+    height: 130px ;
 }
 @media (max-width: 414px) {
     .blog6_input {
@@ -46,7 +47,12 @@
         margin: 0px 0px 5px 0px;
     }
     .blog6_textarea {
-        width: 280px;
-        height: 150px ;
+        width: 290px;
+        height: 165px ;
+    }
+    .blog6_form {
+        width: 300px;
+        margin: 0px 0px 5px 0px;
+
     }
 }
