--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -6,3 +6,8 @@ height: 80px;
     justify-content: flex-end;
     align-items: center;
 }
+@media (max-width: 414px) {
+ .header {
+     justify-content: center;
+ }
+}
