--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -1,6 +1,6 @@
 .main {
     width: 100%;
-    height:1000px;
+    height:100%;
     background: pink;
   display: flex;
     justify-content: center;
@@ -10,7 +10,6 @@
 @media (max-width: 412px) {
     .main {
         display: block;
-        justify-content: normal;
-        align-items: normal;
+
     }
 }
