--- a/src/main/profile/MyImage/MyImage.module.css
+++ b/src/main/profile/MyImage/MyImage.module.css
@@ -6,7 +6,7 @@
 @media (max-width: 414px) {
     .myimage {
         width: 100%;
-        height: 1000px;
-
+        height: 100%;
+   padding: 0px 0px 100% 0px;
     }
 }
