--- a/src/main/profile/Profile.module.css
+++ b/src/main/profile/Profile.module.css
@@ -11,7 +11,7 @@
         width: 90%;
         display: block;
         justify-content: normal;
-        height: 1000px;
+        height: 100%;
     }
 }
 
