--- a/src/main/profile/MyImage/MyImage.module.css
+++ b/src/main/profile/MyImage/MyImage.module.css
@@ -3,7 +3,7 @@
     width: 300px;
     background: gray;
 }
-@media (max-width: 414px) {
+@media (min-width: 200px) and (max-width: 414px) {
     .myimage {
         width: 100%;
         height: 100%;
